# RingLight

./: CMakeLists.txt  Makefile  PKGBUILD  README.md  ringlight-monitor  ringlight-monitor-wrapper  ringlight-monitor.service  ringlight.install
aur/: PKGBUILD  ringlight.install
protocol/: wlr-layer-shell-unstable-v1.xml
resources/: ringlight.desktop
src/: gui.cpp  monitor.c  overlay.c  overlay.cpp  ringlight-monitor.c  ringlight.cpp
systemd/: ringlight-monitor.service
